2004-07-13  Luke Gorrie  <luke@bluetail.com>

	* slime.el (slime-restart-inferior-lisp): Renamed shortcut to
	"restart-inferior-lisp" from "restart-lisp". The name better
	suggests what it does: kill *inferior-lisp* and rerun SLIME.

2004-07-13  Eric Blood  <eblood@winkywooster.org>

	(slime-inspector-next-inspectable-object): New inspector command
	to goto the next inspectable object (slot). Bound to TAB.

2004-07-13  Christophe Rhodes  <csr21@cam.ac.uk>

	* slime.el: add support for actionable references in the
	*slime-compiler-notes* buffer.
	(slime-merge-notes): merge references if applicable.
	(slime-compiler-notes-mode-map): use new functions defaulting to
	show-details, but overrideable by text properties.
	(slime-tree-default-printer): destroy generality by assuming a
	tree of conditions, and insert references if applicable.
	(sldb-format-reference-source): add :amop
	
	* swank-sbcl.lisp (signal-compiler-condition,
	brief-compiler-message-for-emacs,
	long-compiler-message-for-emacs): handle references in compiler
	conditions.

	* swank.lisp (make-compiler-note): propagate references.

	* swank-backend.lisp (compiler-condition): add references slot.
	
2004-07-12  Luke Gorrie  <luke@bluetail.com>

	* slime.el (slime-easy-menu): Added "Apropos all" menu item.
	(slime-restart-lisp): Added `restart-lisp' shortcut. Doesn't do
	the right thing if you have multiple Lisps up.

	* swank.lisp: Added some docstrings.
	Rearranged completion code and somewhat SLDB trying to layout
	functions above their subfunctions in a tree-like way.
	(slime-protocol-error): Renamed from slime-read-error.
	(carefully-find-package): Now returns NIL if package can't be
	determined, rather than *BUFFER-PACKAGE*. Correct? I didn't see
	why it should return *BUFFER-PACKAGE*.
	(xref): Find symbol in *BUFFER-PACKAGE*.

2004-07-09  Peter Seibel  <peter@javamonkey.com>

	* swank.lisp (package-string-for-prompt): Change the way package
	name in prompt is computed. N.B. after this change the name